one-bangkok-app-trunk/backend/ob-iam/k8s/uat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ob-iam
spec:
  selector:
    matchLabels:
      name: ob-iam
  template:
    metadata:
      labels:
        name: ob-iam
    spec:
      containers:
        - name: ob-iam
          image: 479397374389.dkr.ecr.ap-southeast-1.amazonaws.com/ob-iam/uat:ob-iam_latest
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
