one-bangkok-app-trunk/backend/ob-iam/k8s/uat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/group.name: generic-alb
  name: ob-iam
spec:
  ingressClassName: alb
  rules:
    - host: iam-uat.glorymtel.xyz
      http:
        paths:
          - path: /
            backend:
              service:
                name: ob-iam
                port:
                  number: 80
            pathType: Prefix
